[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmo-tui"
version = "0.1.0"
description = "A terminal dashboard for NASA's open data — live world map, asteroid tracker, space weather, ISS tracker, and more."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rahul", email = "info@opsential.co.in" }]
keywords = ["nasa", "terminal", "dashboard", "tui", "space", "iss", "asteroid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "platformdirs>=4.0.0",
    "sgp4>=2.20",
]

[project.urls]
Homepage = "https://github.com/irahulstomar/cosmo-tui"

[project.scripts]
cosmo = "cosmo.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cosmo = ["data/*.txt", "data/*.json", "data/*.geojson"]
